# hello-libs

./: settings.gradle
app/src/main/cpp/: CMakeLists.txt
distribution/gperf/include/: SurfaceTexture.h  gperf.h
mylibrary/: build.gradle
mylibrary/src/androidTest/java/tracking/skyworth/com/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/cpp/gperf/: CMakeLists.txt
mylibrary/src/main/cpp/gperf/src/: SurfaceTexture.cpp  gperf.c  myNeed.h
mylibrary2/: build.gradle
mylibrary2/src/main/: AndroidManifest.xml
mylibrary2/src/main/cpp/: CMakeLists.txt  mydemo.cpp  mydemo.h
mylibrary2/src/test/java/tracking/skyworth/com/mylibrary/: ExampleUnitTest.java
